# cw-starter

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  Makefile  README.md  build_release.sh
contracts/empty-template/: Cargo.toml
contracts/empty-template/src/: contract.rs  msg.rs  state.rs
integration/: Makefile  README.md  mnemonic_testnet.json  package.json
local/: Makefile
scripts/: build_release.sh
